[gd_scene load_steps=3 format=3 uid="uid://el6o5uk15g2c"]

[ext_resource type="Theme" uid="uid://crq1fwn0ajw7b" path="res://gdre_theme.tres" id="1"]
[ext_resource type="Script" path="res://gdre_main.gd" id="2"]

[node name="root" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 32.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1")
script = ExtResource("2")

[node name="log_window" type="RichTextLabel" parent="."]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 2
theme_override_colors/default_color = Color(0.470588, 0.45098, 0.45098, 1)
theme_override_constants/line_separation = 5
scroll_following = true
selection_enabled = true

[node name="menu_background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = -32.0
grow_horizontal = 2

[node name="re_editor_standalone" type="GodotREEditorStandalone" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = -32.0
grow_horizontal = 2

[node name="version_lbl" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_top = -30.768
offset_bottom = 0.232
grow_horizontal = 0
grow_vertical = 0
mouse_filter = 1
text = "$$$"
flat = true

[connection signal="write_log_message" from="re_editor_standalone" to="." method="_on_re_editor_standalone_write_log_message"]
[connection signal="pressed" from="version_lbl" to="." method="_on_version_lbl_pressed"]
